Update Logistic Regression with a Neural Network mindset.ipynb
Changed the old non-working functions to something working in the 7th task

--- a/deep-learning/1-neural-networks-and-deep-learning/2-logistic-regression-as-a-neural-network/Logistic Regression with a Neural Network mindset.ipynb
+++ b/deep-learning/1-neural-networks-and-deep-learning/2-logistic-regression-as-a-neural-network/Logistic Regression with a Neural Network mindset.ipynb
@@ -1270,8 +1270,9 @@
     "\n",
     "# We preprocess the image to fit your algorithm.\n",
     "fname = \"images/\" + my_image\n",
-    "image = np.array(ndimage.imread(fname, flatten=False))\n",
-    "my_image = scipy.misc.imresize(image, size=(num_px,num_px)).reshape((1, num_px*num_px*3)).T\n",
+    "image = Image.open(fname)\n",
+    "my_image = image.resize((num_px,num_px), Image.ANTIALIAS)\n",
+    "my_image = np.array(my_image.getdata()).reshape((1, num_px*num_px*3)).T\n",
     "my_predicted_image = predict(d[\"w\"], d[\"b\"], my_image)\n",
     "\n",
     "plt.imshow(image)\n",
