--- a/deep-learning/1-neural-networks-and-deep-learning/1-python-basics-with-numpy/Python Basics With Numpy.ipynb
+++ b/deep-learning/1-neural-networks-and-deep-learning/1-python-basics-with-numpy/Python Basics With Numpy.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
        "0.9525741268224334"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -192,14 +192,14 @@
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "a float is required",
+     "evalue": "bad operand type for unary -: 'list'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-2e11097d6860>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mbasic_sigmoid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# you will see this give an error when you run it, because x is a vector.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-14-6251b49b534b>\u001b[0m in \u001b[0;36mbasic_sigmoid\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m### START CODE HERE ### (≈ 1 line of code)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0;31m### END CODE HERE ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: a float is required"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### One reason why we use \"numpy\" instead of \"math\" in Deep Learning ###\u001b[39;00m\n\u001b[0;32m      2\u001b[0m x \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m \u001b[43mbasic_sigmoid\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# you will see this give an error when you run it, because x is a vector.\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 17\u001b[0m, in \u001b[0;36mbasic_sigmoid\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;03mCompute sigmoid of x.\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124;03ms -- sigmoid(x)\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m### START CODE HERE ### (≈ 1 line of code)\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m math\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241;43m-\u001b[39;49m\u001b[43mx\u001b[49m))\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m### END CODE HERE ###\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m s\n",
+      "\u001b[1;31mTypeError\u001b[0m: bad operand type for unary -: 'list'"
      ]
     }
    ],
@@ -218,11 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2.71828183  7.3890561  20.08553692]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -240,11 +248,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# example of vector operation\n",
     "x = np.array([1, 2, 3])\n",
@@ -277,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -307,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -315,10 +331,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.73105858,  0.88079708,  0.95257413])"
+       "array([0.73105858, 0.88079708, 0.95257413])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -378,8 +394,8 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE ### (≈ 2 lines of code)\n",
-    "    s = 1 / (1 + np.exp(-x))\n",
-    "    ds = s * (1 - s)\n",
+    "    \n",
+    "    ds = sigmoid(x) * (1 - sigmoid(x))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return ds"
@@ -387,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -396,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigmoid_derivative(x) = [ 0.19661193  0.10499359  0.04517666]\n"
+      "sigmoid_derivative(x) = [0.19661193 0.10499359 0.04517666]\n"
      ]
     }
    ],
@@ -444,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -469,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -478,24 +494,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "image2vector(image) = [[ 0.67826139]\n",
-      " [ 0.29380381]\n",
-      " [ 0.90714982]\n",
-      " [ 0.52835647]\n",
-      " [ 0.4215251 ]\n",
-      " [ 0.45017551]\n",
-      " [ 0.92814219]\n",
-      " [ 0.96677647]\n",
-      " [ 0.85304703]\n",
-      " [ 0.52351845]\n",
-      " [ 0.19981397]\n",
-      " [ 0.27417313]\n",
-      " [ 0.60659855]\n",
-      " [ 0.00533165]\n",
-      " [ 0.10820313]\n",
-      " [ 0.49978937]\n",
-      " [ 0.34144279]\n",
-      " [ 0.94630077]]\n"
+      "image2vector(image) = [[0.67826139]\n",
+      " [0.29380381]\n",
+      " [0.90714982]\n",
+      " [0.52835647]\n",
+      " [0.4215251 ]\n",
+      " [0.45017551]\n",
+      " [0.92814219]\n",
+      " [0.96677647]\n",
+      " [0.85304703]\n",
+      " [0.52351845]\n",
+      " [0.19981397]\n",
+      " [0.27417313]\n",
+      " [0.60659855]\n",
+      " [0.00533165]\n",
+      " [0.10820313]\n",
+      " [0.49978937]\n",
+      " [0.34144279]\n",
+      " [0.94630077]]\n"
      ]
     }
    ],
@@ -576,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -617,8 +633,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "normalizeRows(x) = [[ 0.          0.6         0.8       ]\n",
-      " [ 0.13736056  0.82416338  0.54944226]]\n"
+      "normalizeRows(x) = [[0.         0.6        0.8       ]\n",
+      " [0.13736056 0.82416338 0.54944226]]\n"
      ]
     }
    ],
@@ -702,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -739,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -748,10 +764,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "softmax(x) = [[  9.80897665e-01   8.94462891e-04   1.79657674e-02   1.21052389e-04\n",
-      "    1.21052389e-04]\n",
-      " [  8.78679856e-01   1.18916387e-01   8.01252314e-04   8.01252314e-04\n",
-      "    8.01252314e-04]]\n"
+      "softmax(x) = [[9.80897665e-01 8.94462891e-04 1.79657674e-02 1.21052389e-04\n",
+      "  1.21052389e-04]\n",
+      " [8.78679856e-01 1.18916387e-01 8.01252314e-04 8.01252314e-04\n",
+      "  8.01252314e-04]]\n"
      ]
     }
    ],
@@ -823,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -833,42 +849,27 @@
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " ----- Computation time = 0.15407300000003232ms\n",
-      "outer = [[ 81.  18.  18.  81.   0.  81.  18.  45.   0.   0.  81.  18.  45.   0.\n",
-      "    0.]\n",
-      " [ 18.   4.   4.  18.   0.  18.   4.  10.   0.   0.  18.   4.  10.   0.\n",
-      "    0.]\n",
-      " [ 45.  10.  10.  45.   0.  45.  10.  25.   0.   0.  45.  10.  25.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [ 63.  14.  14.  63.   0.  63.  14.  35.   0.   0.  63.  14.  35.   0.\n",
-      "    0.]\n",
-      " [ 45.  10.  10.  45.   0.  45.  10.  25.   0.   0.  45.  10.  25.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [ 81.  18.  18.  81.   0.  81.  18.  45.   0.   0.  81.  18.  45.   0.\n",
-      "    0.]\n",
-      " [ 18.   4.   4.  18.   0.  18.   4.  10.   0.   0.  18.   4.  10.   0.\n",
-      "    0.]\n",
-      " [ 45.  10.  10.  45.   0.  45.  10.  25.   0.   0.  45.  10.  25.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]\n",
-      " [  0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.   0.\n",
-      "    0.]]\n",
-      " ----- Computation time = 0.5157979999999007ms\n",
-      "elementwise multiplication = [ 81.   4.  10.   0.   0.  63.  10.   0.   0.   0.  81.   4.  25.   0.   0.]\n",
-      " ----- Computation time = 0.21613199999981347ms\n",
-      "gdot = [ 20.70166807  23.48077767  22.61832027]\n",
-      " ----- Computation time = 0.3838759999998942ms\n"
+      " ----- Computation time = 0.0ms\n",
+      "outer = [[81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
+      " [18.  4.  4. 18.  0. 18.  4. 10.  0.  0. 18.  4. 10.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [63. 14. 14. 63.  0. 63. 14. 35.  0.  0. 63. 14. 35.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [81. 18. 18. 81.  0. 81. 18. 45.  0.  0. 81. 18. 45.  0.  0.]\n",
+      " [18.  4.  4. 18.  0. 18.  4. 10.  0.  0. 18.  4. 10.  0.  0.]\n",
+      " [45. 10. 10. 45.  0. 45. 10. 25.  0.  0. 45. 10. 25.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]\n",
+      " ----- Computation time = 0.0ms\n",
+      "elementwise multiplication = [81.  4. 10.  0.  0. 63. 10.  0.  0.  0. 81.  4. 25.  0.  0.]\n",
+      " ----- Computation time = 0.0ms\n",
+      "gdot = [17.30223867 26.30275929 18.95427447]\n",
+      " ----- Computation time = 0.0ms\n"
      ]
     }
    ],
@@ -916,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -926,7 +927,7 @@
      "output_type": "stream",
      "text": [
       "dot = 278\n",
-      " ----- Computation time = 0.21678500000010814ms\n",
+      " ----- Computation time = 0.0ms\n",
       "outer = [[81 18 18 81  0 81 18 45  0  0 81 18 45  0  0]\n",
       " [18  4  4 18  0 18  4 10  0  0 18  4 10  0  0]\n",
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
@@ -942,11 +943,11 @@
       " [45 10 10 45  0 45 10 25  0  0 45 10 25  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
       " [ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]]\n",
-      " ----- Computation time = 0.14314600000009392ms\n",
+      " ----- Computation time = 0.0ms\n",
       "elementwise multiplication = [81  4 10  0  0 63 10  0  0  0 81  4 25  0  0]\n",
-      " ----- Computation time = 0.11415700000005913ms\n",
-      "gdot = [ 20.70166807  23.48077767  22.61832027]\n",
-      " ----- Computation time = 0.19792499999971014ms\n"
+      " ----- Computation time = 0.0ms\n",
+      "gdot = [17.30223867 26.30275929 18.95427447]\n",
+      " ----- Computation time = 0.0ms\n"
      ]
     }
    ],
@@ -1004,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1031,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -1103,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1161,7 +1162,7 @@
    "launcher_item_id": "Zh0CU"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "deepl",
    "language": "python",
    "name": "python3"
   },
@@ -1175,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
